# wheel-it

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile.api  README.md  architecture  docker-compose.yml  premium-expansion.md  pyproject.toml  render.yaml
.github/workflows/: pypi-publish.yml
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  gsd.db-shm  gsd.db-wal
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: main.py  requirements.txt  schemas.py
apps/web/: Dockerfile  package-lock.json
config/: credentials.py  params.py  screener.yaml  symbol_list.txt
config/presets/: aggressive.yaml  (+2 more)
core/: broker_client.py  cli_common.py
logging/: __init__.py
models/: screened_stock.py
screener/: call_screener.py  config_loader.py  display.py  export.py  finnhub_client.py  market_data.py  pipeline.py  put_screener.py
scripts/: run_call_screener.py  run_put_screener.py  run_screener.py  run_strategy.py
tests/: conftest.py  test_call_screener.py  test_cli_screener.py  test_cli_strategy.py  test_credentials.py  test_display.py  test_export.py  test_finnhub_client.py  test_hv_earnings.py  test_market_data.py  test_pipeline.py  test_put_screener.py  test_screener_config.py
wheel_it.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+209 files in other folders)
