[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wheel-it"
version = "0.1.2"
description = "An automated options wheel trading strategy."
authors = [
    { name = "Vahagn Madatyan" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "python-dotenv",
    "pandas>=1.5",
    "numpy>=1.23",
    "pytz",
    "requests>=2.28",
    "alpaca-py",
    "finnhub-python",
    "rich>=14.0",
    "typer>=0.9.0",
    "ta>=0.11",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
wheelit = "scripts.run_strategy:main"
run-strategy = "scripts.run_strategy:main"
run-screener = "scripts.run_screener:main"
run-call-screener = "scripts.run_call_screener:main"
run-put-screener = "scripts.run_put_screener:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["archive"]
